# inputFramework

./: README.md  requirements.txt  setup.cfg
.github/workflows/: buildPythonPackage.yml
src/input_framework/: __init__.py  exceptions.py  imu_controller.py  interface.py  sensor_wrapper.py
tests/: controller_test.py
