[metadata]
name=input-framework-lars-jaeger
version=0.0.1
author=Lars Jaeger
author_email=lars@jgr.one
description = Input-Framework for an IMU Controller
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DHBW-HDH-Team-HimbeerPi/inputFramework
project_urls =
    Bug Tracker = https://github.com/DHBW-HDH-Team-HimbeerPi/inputFramework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src